[package]
name = "rdupe"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
rayon = "1.7"
blake3 = "1.5"
clap = { version = "4.4", features = ["derive"] }
indicatif = "0.17"
anyhow = "1.0"
memmap2 = "0.9"
md5 = "0.7"
sha1 = "0.10"
sha2 = "0.10"
ignore = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
console = "0.15"
dialoguer = "0.11"
ctrlc = "3.4"
xxhash-rust = { version = "0.8", features = ["xxh3", "xxh64"] }
wyhash = "0.5"
twox-hash = "1.6"
